Fix SVGs scaling poorly on mobile (#182)

--- a/material.angular.io/src/app/pages/component-category-list/component-category-list.scss
+++ b/material.angular.io/src/app/pages/component-category-list/component-category-list.scss
@@ -23,7 +23,8 @@
 }
 
 .docs-component-category-list-card-summary {
-  height: 2.4em;
+  min-height: 2.4em;
+  margin-bottom: 8px;
 }
 
 .docs-component-category-list-header {
