--- a/material.angular.io/src/app/pages/homepage/homepage.scss
+++ b/material.angular.io/src/app/pages/homepage/homepage.scss
@@ -2,20 +2,20 @@
 $margin-promotion-sections: 60px;
 
 .docs-header-background {
-  height: 500px;
+  height: 300px;
   margin-bottom: 40px;
 }
 
 .docs-header-section {
   text-align: center;
-  padding-top: 160px;
+  padding-top: 60px;
 }
 
 .docs-header-headline {
   h1 {
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 40px;
+    font-size: 56px;
+    font-weight: 300;
+    line-height: 56px;
     margin: 15px 0 15px 0;
   }
 
